feat: 問題と答え追加

--- a/Hono/2nd-prac/Answer/server/package.json
+++ b/Hono/2nd-prac/Answer/server/package.json
@@ -10,5 +10,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "hono": "^4.8.4"
+  }
 }
